1998-06-23  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (modules4): Add tests for reversing the order of the
	"!first-dir/sdir" and "first-dir".

1998-06-23  Jim Kingdon  <kingdon@harvey.cyclic.com>
	and Dave Wolfe@Motorola.

	* sanity.sh (modes2): Touch the file before chmod'ing it.

1998-06-21  Ian Lance Taylor  <ian@cygnus.com>

	* update.c (merge_files): Revert changes of 1998-06-19.  Instead,
	register a merged file with a dummy time stamp.  Only set
	last_register_time if we need to.
	(join_file): Likewise.  Always register a merged file, not just
	when the merge fails.

1998-06-21  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* call_diff_write_output, call_diff_printf_output,
	call_diff_flush_output, call_diff_write_stdout, call_diff_error,
	call_diff_stdout_callbacks, call_diff_file_callbacks): Re-indent.

1998-06-19  Ian Lance Taylor  <ian@cygnus.com>

	* update.c (merge_file): Make sure the time stamp of the file is
	different from the time stamp we register in the Entries file.
	(join_file): Likewise.

1998-06-18  Ian Lance Taylor  <ian@cygnus.com>

	* rcscmds.c: Include <stdio.h>.  Include either <stdarg.h> or
	<varargs.h>.  Declare vasprintf.
	(call_diff_write_output): New static function.
	(call_diff_printf_output): New static function.
	(call_diff_flush_output): New static function.
	(call_diff_write_stdout): New static function.
	(call_diff_error): New static function.
	(call_diff_stdout_callbacks): New static variable.
	(call_diff_file_callbacks): New static variable.
	(call_diff): Don't sleep.  Use a callback structure when calling
	the diff library.
	(call_diff3): Likewise.

	* rcscmds.c: Include diffrun.h.
	(call_diff, call_diff3): Pass NULL callback parameter.
	(diff_run, diff3_run): Don't declare.
	* Makefile.in (rcscmds.o): New target, to use -I for diff
	directory.
	(zlib.o): Depend upon zlib.h.

1998-06-09  Mike Sutton@SAIC

	Make it compile with Sun's bundled K&R C compiler: